--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.20.0
-opencv-python==4.5.1.48
-Pillow==8.1.0
+numpy==1.20.2
+opencv-python-headless==4.5.1.48
+Pillow==8.1.2
 pygame==2.0.1
